--- a/style.css
+++ b/style.css
@@ -1,62 +1,113 @@
-img{
-  width: 400px;
-  align-items: left;
-  float:left;
-  margin-top:10px;
-  margin-left: 20px;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-  background-color: rgb(214, 211, 211);
+body {
+  max-width: 100%;
+  background-color: #E1D5BB;
   color: #111010;
   margin:0px 0px 30px 0px;
   width:1024px;
 }
 
-.principal{
+.menu {
+  display: flex;
+  list-style: none;
+  justify-content: right;
+  font-family: sans-serif;
   text-align:right;
-  font-family:Open Sans, sans-serif;
-  background: #579D95;
-  height: 50px;
-  width: 100%;
-  margin-top: 0;
-  margin-left: 0;
-  margin-right: 0px;
-  
+  font-weight: bold;
+  background-color: #579D95;
+  padding: 15px;
+  margin-bottom: 15px;
 }
 
-.principal li{
-  display: inline-block;
-  line-height: 3;
-  margin: 0 30px 50px;
-}
-
-.principal ul li a{
-  text-align: left; 
-  color:#A62951;
+.menu li a {
+  font-size: 17px;
+  text-align: right;
   text-decoration: none;
-  font-weight: bolder;
+  color:#A62951;
+  margin-left: 100px;
 }
 
-.primeira{
-  background: #A62951;
- border: solid; 
-}
-
-h1{
+#title {
+  margin: 50px 0 50px 0;
+  font-size: 40px;
   text-align: center;
   color:#A62951;
 }
 
-.augusta {
-  float:left;
+.section-ada {
+  background-color: #A62951;
+}
+
+.div-ada {
+  float:right;
   max-width:500px;
   margin-left:10px;
-  margin-top: 70px;
+  margin-top: 100px;
+  margin-bottom: 190px;
   text-align: center;
   font-size: 1.2em;
 }
 
 b{
   color:#A62951;
+}
+.img-ada-teacher{
+  width: 400px;
+  align-items: left;
+  float:left;
+  margin-top:30px;
+  margin-left: 20px;
+  margin-bottom: 190px;
+}
+
+//sessão outras mulheres
+
+.other-woman{
+  margin-top: 200px;
+}
+
+.title-other-women {
+  text-align: center;
+  padding: 50px;
+  font-size: 40px;
+  color:#A62951;
+  margin-top: 200px;
+}
+
+.ul-other-women {
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  list-style: none;
+  max-width: 800px;
+}
+
+.img-other-women {
+  max-width: 50%;
+  height: auto;
+  border-radius: 50%;
+  margin-bottom: 30px;
+}
+
+.a-other-women {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  padding: 3.625rem 2rem;
+  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.08);
+  border-radius: 0.25rem;
+  font-size: 25px;
+  color:#A62951;
+  background-color:#579D95;
+}
+
+.a-other-women img:hover {
+  transform: translateY(-8px);
 }
