--- a/main.css
+++ b/main.css
@@ -45,6 +45,8 @@
 
 .navbar a:hover {
   opacity: 0.7;
+  color:#D16257;
+  transition: color 1s;
 }
 
 #banner{
@@ -64,14 +66,12 @@
 }
 
 p{
-  display: inline-block;
+  display: flex;
   vertical-align: top;
   position: absolute;
-  width: 20%;
   margin-left: 10%;
   margin-top: 10px;
   font-size: 20px;
-  text-align:start;
 }
 
 .imagem-ada{
