--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 :root {
-  --primary-color: #579D95;
+  --primary-color: #DD3B71;
   --second-color: #111010;
-  --link-color: #A62951; 
+  --link-color: #FFFFFF; 
 }
 
 * {
@@ -15,27 +15,20 @@
   justify-content: space-around;
   align-items: center;
   background-color: var(--primary-color);
-  font-family: sans-serif;
-  font-weight: bold;
-  font-size: 17px;
-  height: 8vh;
+  font-family: 'Bebas Neue', cursive;
+  font-size: 30px;
+  height: 9vh;
 }
-
-.navbar-logo {
-  font-size: 24px;
-  text-transform: uppercase;
-  letter-spacing: 4px; 
-} 
 
 .navbar-list {
   list-style: none;
   display: flex;
-  justify-content: right;
+  justify-content: center;
 }
 
 .navbar-list li {
   letter-spacing: 3px;
-  margin-left: 32px;
+  margin: 50px;
 }
 
 .navbar a {
@@ -45,8 +38,12 @@
 
 .navbar a:hover {
   opacity: 0.7;
-  color:#D16257;
+  color:#F6DBCE;
   transition: color 1s;
+}
+
+body{
+  font-family: 'Montserrat', sans-serif
 }
 
 #banner{
@@ -54,26 +51,34 @@
 }
 
 .principal{
-  background: #fcf2fb;
-  padding: 20px;
+  padding: 3em 0;
+}
+
+.conteudo-principal{
+  width: 640px;
+  margin: 0 auto;
 }
 
 .titulo-centralizado{
   text-align: center;
   font-size: 30px;
-  padding: 20px;
-  color: var(--link-color);
+  padding: 30px;
+  color: var(--primary-color);
 }
 
 p{
-  display: flex;
+  width: 50%;
+  display: inline-block;
   vertical-align: top;
-  position: absolute;
-  margin-left: 10%;
-  margin-top: 10px;
-  font-size: 20px;
+  line-height: 1.5;
+  padding: 20px;
+  font-family:'Krub', sans-serif;
 }
 
 .imagem-ada{
   width: 50%;
+  opacity: 1;
+  transition: 400ms;
+  box-shadow: 5px 10px 5px #F6DBCE;
+  
 }
