--- a/main.css
+++ b/main.css
@@ -37,10 +37,20 @@
 }
 
 .navbar a:hover {
-  opacity: 0.7;
-  color:#F6DBCE;
-  transition: color 1s;
+  color:#DD3B71;
+  transition: border 1.5s;
+  padding:4px;
+  border: 10px;
+  border-radius: 10px;
+  background: #F6DBCE;
 }
+
+.navbar a:active{
+  border: 10px;
+  border-radius: 5px;
+  background: chocolate;
+}
+
 
 body{
   font-family: 'Montserrat', sans-serif
